scrollbar height corrected

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -31,6 +31,7 @@
 /* width */
 ::-webkit-scrollbar {
     width: 4px;
+    height: 4px;
     border-radius: 4px;
 }
 
